更新维保单位详细说明，新增自助上报模块

--- a/src/main/resources/static/abase.html
+++ b/src/main/resources/static/abase.html
@@ -852,9 +852,9 @@
                     </table>
                 </div>
                 <div class="modal-footer">
-<!--                    <button type="button" class="btn btn-danger" v-on:click="deletebyids(errinfo.errortableId)">-->
-<!--                        删除该记录-->
-<!--                    </button>-->
+                    <button type="button" class="btn btn-danger" v-on:click="deletebyids(errinfo.errortableId)">
+                        删除该记录
+                    </button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">关闭
                     </button>
                     <button type="button" class="btn btn-primary" v-on:click="updatebyid">
@@ -1229,8 +1229,9 @@
                     </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal -->
-        </div>
 
+
+        </div>
         <!-- VUE -->
         <script src="js/vue.min.js"></script>
         <script src="js/myvue.js"></script>
