更新维保单位详细说明，新增自助上报模块，修复bug

--- a/src/main/resources/static/abase.html
+++ b/src/main/resources/static/abase.html
@@ -1037,7 +1037,7 @@
 
 
     <!-- 模态框（Modal） -->
-    <div class="modal fade" id="insertinfoModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    <div class="modal fade" id="IPmyModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
          aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
